apps/sonarr/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sonarr
  labels:
    app: sonarr
