apps/sonarr/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: sonarr
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`sonarr.int.matthewpsimons.com`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
